[package]
name = "hf-text-to-image"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["HyperCodec"]
repository = "https://github.com/HyperCodec/hf-text-to-image"
homepage = "https://github.com/HyperCodec/hf-text-to-image"


[dependencies]
image = "0.25.2"
reqwest = "0.12.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
