[package]
name = "hf-text-to-image"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["HyperCodec"]
repository = "https://github.com/HyperCodec/hf-text-to-image"
homepage = "https://github.com/HyperCodec/hf-text-to-image"


[features]
default = []
image = ["dep:image"]
ril = ["dep:ril"]

[dependencies]
image = { version = "0.25.2", optional = true }
reqwest = "0.12.6"
ril = { version = "0.10.1", features = ["all"], optional = true }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
